--- a/src/components/global/menu/menu.css
+++ b/src/components/global/menu/menu.css
@@ -1,56 +1,31 @@
 .c-menu {
-  z-index: map(layers, modal);
-  background-color: $navigation-color;
-
   .has-js & {
     position: fixed;
-    transition-duration: $navigation-duration;
-    transition-timing-function: ease-out;
-  }
+    z-index: map(layers, modal);
 
-  [data-menu-expanded=true] & {
-    transition-delay: $banner-duration;
-  }
-
-  @media (--upto-medium-screen) {
-    .has-js & {
-      top: $banner-height--small;
-      max-height: 0;
-      width: 100%;
-      transition-property: max-height;
-    }
-
-    [data-menu-expanded=false] & {
-      max-height: 0;
-    }
-
-    [data-menu-expanded=true] & {
-      max-height: 32rem;
-      box-shadow: 0 8px 8px 0 $navigation-color--shadow;
-    }
-  }
-
-  @media (--from-medium-screen) {
-    .no-js & {
-      margin-right: $navigation-width--large;
-    }
-
-    .has-js & {
+    /* Create ‘fake’ banner/sidebar, so drawer can slide from underneath it */
+    &::before {
+      position: fixed;
       top: 0;
       right: 0;
-      bottom: 0;
-      padding: 0 $navigation-width--large 0 0;
-      width: $navigation-width--large;
-      transition-property: width;
-    }
+      z-index: calc(map(layers, modal) + 1);
+      display: block;
+      content: '';
 
-    [data-menu-expanded=false] & {
-      width: $navigation-width--large;
-    }
+      @media (--upto-medium-screen) {
+        left: 0;
+        background-color: $color-year--dark;
+        background-color: var(--color-year--dark, $color-year--dark);
+        height: $banner-height--small;
+        width: 100%;
+      }
 
-    [data-menu-expanded=true] & {
-      width: 22.5em;
-      box-shadow: 0 0 8px 0 $navigation-color--shadow;
+      @media (--from-medium-screen) {
+        background-color: white;
+        box-shadow: inset 1px 0 $navigation-color--offset;
+        height: 100%;
+        width: $navigation-width--large;
+      }
     }
   }
 
@@ -64,34 +39,76 @@
 
   display: block;
   position: fixed;
+  top: 0;
+  right: 0;
   z-index: calc(map(layers, modal) + 1);
 
+  .no-js & {
+    @apply --hidden;
+  }
+
   @media (--upto-medium-screen) {
-    top: map(sizes, xsmall);
-    right: map(sizes, xsmall);
+    padding: map(sizes, xsmall);
     color: white;
 
     &:hover,
     &:active {
       color: white;
     }
-
-    [data-menu-expanded=true] & {
-      color: $navigation-color--text;
-    }
   }
 
   @media (--from-medium-screen) {
     @apply --navigation-link;
 
-    top: 0;
-    right: 0;
     padding: map(spaces, medium);
     box-shadow: inset 0 -1px 0 $navigation-color--offset;
   }
 
   @media print {
     display: none;
+  }
+}
+
+.c-menu__drawer {
+  display: flex;
+  flex-direction: column;
+  background-color: $navigation-color;
+
+  .has-js & {
+    box-shadow: 0 8px 8px 0 $navigation-color--shadow;
+    transition: transform $navigation-duration ease-out;
+
+    @media (--upto-medium-screen) {
+      width: 100vw;
+    }
+
+    @media (--from-medium-screen) {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      width: 18rem;
+    }
+  }
+}
+
+.c-menu__drawer:not([hidden]) {
+  @media (--upto-medium-screen) {
+    transform: translateY(0);
+  }
+
+  @media (--from-medium-screen) {
+    transform: translateX(calc($navigation-width--large * -1));
+  }
+}
+
+.c-menu__drawer[hidden] {
+  @media (--upto-medium-screen) {
+    transform: translateY(calc(-100% - $banner-height--small));
+  }
+
+  @media (--from-medium-screen) {
+    transform: translateX(100%);
   }
 }
 
@@ -103,67 +120,38 @@
 .c-menu__line {
   transform-origin: 50% 50%;
 
-  /* Transitions */
+  /* Transitions: ☰ */
   &:nth-of-type(1),
   &:nth-of-type(2),
   &:nth-of-type(5),
   &:nth-of-type(6) {
     opacity: 1;
-    transition: transform 0.2s cubic-bezier(0.8, 0, 0.4, 1.8) 0.2s, opacity 0.05s linear 0.1s;
+    transition: transform 0.2s cubic-bezier(0.8, 0, 0.4, 1.4) 0.2s, opacity 0.2s linear;
 
-    [data-menu-expanded=true] & {
+    [aria-expanded=true] & {
       opacity: 0;
-      transition: transform 0.2s ease-out, opacity 0.05s linear 0.1s;
+      transition: transform 0.2s ease-out, opacity 0.2s linear;
     }
   }
 
+  /* Transitions: × */
   &:nth-of-type(3),
   &:nth-of-type(4) {
+    color: red;
     transition: transform 0.2s ease-out;
 
-    [data-menu-expanded=true] & {
-      transition: transform 0.2s cubic-bezier(0.8, 0, 0.4, 1.8) 0.2s;
+    [aria-expanded=true] & {
+      transition: transform 0.2s cubic-bezier(0.8, 0, 0.4, 1.4) 0.2s;
     }
   }
 
   /* Transforms */
-  [data-menu-expanded=true] & {
-    &:nth-of-type(1) {
-      transform: translateY(500%);
-    }
-
-    &:nth-of-type(2) {
-      transform: translateY(250%);
-    }
-
-    &:nth-of-type(3) {
-      transform: rotate(45deg) scaleX(1.3334);
-    }
-
-    &:nth-of-type(4) {
-      transform: rotate(-45deg) scaleX(1.3334);
-    }
-
-    &:nth-of-type(5) {
-      transform: translateY(-250%);
-    }
-
-    &:nth-of-type(6) {
-      transform: translateY(-500%);
-    }
-  }
-}
-
-.c-menu__drawer {
-  display: flex;
-  flex-direction: column;
-
-  .has-js & {
-    overflow: hidden;
-  }
-
-  @media (--from-medium-screen) {
-    height: 100%;
-    box-shadow: inset -1px 0 0 $navigation-color--offset;
+  [aria-expanded=true] & {
+    &:nth-of-type(1) { transform: translateY(500%); }
+    &:nth-of-type(2) { transform: translateY(250%); }
+    &:nth-of-type(3) { transform: rotate(45deg) scaleX(1.3334); }
+    &:nth-of-type(4) { transform: rotate(-45deg) scaleX(1.3334); }
+    &:nth-of-type(5) { transform: translateY(-250%); }
+    &:nth-of-type(6) { transform: translateY(-500%); }
   }
 }
